[package]
name = "my_blog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "index"
path = "src/search_utils/main.rs"

[dependencies]
tera = "1"
actix-web = "4"
env_logger = "0.11.8"
actix-files = "0.6.1"
ignore = "0.4"
toml = "0.9.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
comrak = "0.42.0"
chrono = { version = "0.4.42", features = ["serde"] }
sha1 = "0.10.6"
base64 = "0.22.1"
rand = "0.9.2"
regex = "1.11.3"
tantivy = "0.25.0"
jieba-rs = "0.8.1"
lazy_static = "1.5.0"
futures = "0.3.31"

tokio = { version = "1.48.0", optional = true }
strum_macros = "0.27.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
indexmap = { version = "2.12.0", features = ["serde"] }
log = "0.4.28"

[features]
default = ["dep:tokio"]
