[package]
name = "my_blog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "index"
path = "src/search_utils/main.rs"

[dependencies]
tera = "1"
actix-web = { version = "4", default-features = false, features = ["compress-brotli", "macros"] }
env_logger = "0.11.8"
actix-files = "0.6.9"
ignore = "0.4"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
comrak = { version = "0.48.0", default-features = false }
chrono = { version = "0.4.42", features = ["serde"] }
sha1 = "0.10.6"
base64 = "0.22.1"
rand = "0.9.2"
regex = "1.12.2"
tantivy = "0.25.0"
jieba-rs = "0.8.1"
lazy_static = "1.5.0"
futures = "0.3.31"

tokio = { version = "1.48.0", optional = true }
strum_macros = "0.27.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
indexmap = { version = "2.12.1", features = ["serde"] }
log = "0.4.29"

[features]
default = ["dep:tokio"]

[profile.release]
strip = true
lto = "fat"
