[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
tera = "1.20.1"
actix-web = { version = "4", default-features = false, features = ["compress-brotli", "macros"] }
env_logger = "0.11.8"
actix-files = "0.6.9"
toml = "1.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
comrak = { version = "0.51.0", default-features = false }
sha1 = "0.11.0"
base64 = "0.22.1"
rand = "0.10.0"
futures = "0.3.31"

tokio = { version = "1.48.0", optional = true }
strum_macros = "0.28.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
indexmap = "2.13.0"
log = "0.4.29"
dirs = "6.0.0"
uuid = { version = "1.21.0", features = ["v4"] }
search_utils = { path = "../search_utils" }
const_format = "0.2.35"



[features]
default = ["dep:tokio"]
