[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
# html template
tera = "1.20.1"
# web
actix-web = { version = "4", default-features = false, features = ["compress-brotli", "macros"] }
actix-files = "0.6.9"
# log
env_logger = "0.11.8"
log = "0.4.29"
# serialize
toml = "1.1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.145"
# time
chrono = { version = "0.4.42", features = ["serde"] }
# error
thiserror = "2.0.17"
# render markdown
comrak = { version = "0.51.0", default-features = false }
# for friend request
sha1 = "0.11.0"
base64 = "0.22.1"
# for notify
uuid = { version = "1.21.0", features = ["v4"] }
dirs = "6.0.0"
# utils
rand = "0.10.0"
const_format = "0.2.35"
strum_macros = "0.28.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
indexmap = "2.13.0"
# search
search_utils = { path = "../search_utils" }
# hot update for debug
tokio = { version = "1.48.0", optional = true }
auto_builder = { path = "../auto_builder", optional = true }

[features]
default = ["dep:tokio", "dep:auto_builder"]
